--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-runtime": "^6.6.1",
     "es6-promise": "^3.1.2",
     "react": "^15.0.0-rc.1",
-    "react-dom": "^15.0.0-rc.1"
+    "react-dom": "^15.0.0-rc.1",
+    "systemjs": "git+https://github.com/systemjs/systemjs.git"
   }
 }
